--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="flash_logo_size">250dp</dimen>
-    <dimen name="flash_app_name_size">50sp</dimen>
+    <dimen name="flash_app_name_size">30sp</dimen>
     <dimen name="flash_login_btn_text_size">16sp</dimen>
+    <dimen name="margin">16dp</dimen>
+    <dimen name="logo_size">150dp</dimen>
 </resources>
