--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,10 +65,10 @@
 
 
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:id="@+id/profilePic"
+                android:layout_width="250dp"
+                android:layout_height="220dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_account_circle_black_48dp" />
 
             <Button
