--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -90,6 +90,7 @@
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:imeOptions="actionNext"
                     android:singleLine="true"
                     android:textColor="@color/colorSecondaryText" />
 
@@ -105,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="true"
                     android:hint="@string/hint_password"
-                    android:imeOptions="actionUnspecified"
+                    android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -123,10 +124,10 @@
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="true"
                     android:hint="@string/hint_school_name"
-                    android:imeOptions="actionDone"
                     android:inputType="textMultiLine"
+                    android:imeOptions="actionDone"
                     android:maxLines="3"
-                    android:singleLine="false"
+                    android:singleLine="true"
                     android:textColor="@color/colorSecondaryText" />
 
             </android.support.design.widget.TextInputLayout>
