--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -4,5 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.nice.nice.user.UserHomeFragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_animal_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </FrameLayout>
