--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nice.nice.user.UserHomeActivity">
-
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
     <FrameLayout
         android:layout_above="@id/navigation"
         android:id="@+id/frame_container"
@@ -20,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         app:itemBackground="@color/colorPrimary"
         android:foreground="?attr/selectableItemBackground"
@@ -31,4 +28,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
