--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -8,6 +8,7 @@
     android:weightSum="1">
 
     <CheckBox
+        android:id="@+id/done"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_weight=".1"
@@ -31,35 +32,8 @@
             android:textSize="@dimen/dialog_title_text_size"
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="1">
-
-            <TextView
-                android:id="@+id/assigned"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6"
-                android:text="Jyothish Jose"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:textColor="@color/colorSecondaryText"
-                android:textSize="@dimen/dialog_message_text_size" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="12/10/1987"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:textColor="@color/colorSecondaryText"
-                android:textSize="@dimen/dialog_date_text_size" />
-        </LinearLayout>
-
         <TextView
-            android:id="@+id/schoolName"
+            android:id="@+id/desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/small_margin"
@@ -67,6 +41,25 @@
             android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="@color/colorSecondaryText"
             android:textSize="@dimen/dialog_date_text_size" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/dueDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="12/10/1987"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorSecondaryText"
+                android:textSize="@dimen/dialog_date_text_size" />
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
